[package]
name = "kml_to_gpx_converter"
version = "0.1.0"
authors = ["Ilja Hamalainen <ilja.hamalainen@infinityworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
serde_derive = "1.0.101"
serde-xml-rs = "0.3.1"